Fixed NewSale page overflow bug

--- a/src/pages/Sale/components/NewSale/newSale.module.scss
+++ b/src/pages/Sale/components/NewSale/newSale.module.scss
@@ -16,7 +16,7 @@
     height: 100%;
 
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: 10% 1fr;
 }
 .rightPanel {
     display: grid;
